--- a/css/font.css
+++ b/css/font.css
@@ -5,7 +5,7 @@
     src: url('../font/ImperialScript-Regular.ttf');
 }
 
-.font-ubuntu {
+.font-ImperialScript {
     font-family: 'ImperialScript', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
@@ -37,7 +37,7 @@
     src: url('../font/DancingScript-Bold.ttf');
 }
 
-.font-ubuntu {
+.font-DancingScript {
     font-family: 'DancingScript', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
@@ -73,4 +73,26 @@
 
 .font-DynaPuff {
     font-family: 'DynaPuff', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+@font-face {
+    font-family: 'Modak';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../font/Modak-Regular.ttf');
+}
+
+.font-modak {
+    font-family: 'Modak', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+@font-face {
+    font-family: 'Coiny';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../font/Coiny-Regular.ttf');
+}
+
+.font-coiny {
+    font-family: 'Coiny', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
